fix(39): add forgotten path parameter
